fix: mobile menu z-index

--- a/src/stylesheets/nav.css
+++ b/src/stylesheets/nav.css
@@ -13,7 +13,6 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
   transition: top 0.2s ease-in-out;
 }
 
